# Requirements Update (requirements will need to be reinstalled)
Updated lxml requirement to 5.1.0

# New Features

# Updates

# Defaults

# Bug Fixes
Fixed the Rate Limit on MDbList calls
Fixed collection fields being locked during batch edits when they shouldn't be

Various other Minor Fixes