@@ -58,7 +58,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000223
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Emmys <<key_name>>
     template:
