@@ -68,7 +68,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000292
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Golden Globe <<key_name>>
     template:
