@@ -33,7 +33,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000468
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: National Film Registry <<key_name>>
     template:
