@@ -59,7 +59,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000003
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Oscars Winners <<key_name>>
     template:
