@@ -39,7 +39,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000598
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Screen Actors Guild <<key_name>>
     template:
