@@ -34,7 +34,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000349
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Independent Spirit Awards <<key_name>>
     template:
