@@ -41,7 +41,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000659
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Toronto International Film Festival <<key_name>>
     template:
