@@ -42,7 +42,7 @@ dynamic_collections:
     sync: true
     data:
       event_id: ev0000681
-      starting: latest-5
+      starting: latest-4
       ending: latest
     title_format: Venice <<key_name>>
     template:
