@@ -10,5 +10,6 @@ Updated lxml requirement to 5.1.0
 # Bug Fixes
 Fixed the Rate Limit on MDbList calls
 Fixed collection fields being locked during batch edits when they shouldn't be
+Fixed awards dynamic collections where `latest` wasn't pulling the correct values
 
 Various other Minor Fixes
